force-app/main/default/objects/BREG_Annuals_Rollover_Job_Settings__mdt/BREG_Annuals_Rollover_Job_Settings__mdt.object-meta.xml
<CustomObject>
    <label>BREG Annuals Rollover Job Setting</label>
    <pluralLabel>BREG Annuals Rollover Job Settings</pluralLabel>
</CustomObject>