force-app/main/default/objects/BREG_Annuals_Rollover_Job_Settings__mdt/fields/breg_Annuals_Sub_Disabled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Annuals_Sub_Disabled_End_Date__c</fullName>
    <description>Date\Time when annuals submission should become possible again</description>
    <label>Annuals Sub Disabled End Date</label>
    <type>DateTime</type>
</CustomField>