force-app/main/default/objects/BREG_Annuals_Rollover_Job_Settings__mdt/fields/breg_Annuals_Sub_Disabled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Annuals_Sub_Disabled_Start_Date__c</fullName>
    <description>Date\Time when annuals submission should be disabled</description>
    <label>Annuals Submission Disabled Start Date</label>
    <type>DateTime</type>
</CustomField>