force-app/main/default/objects/BREG_Annuals_Rollover_Job_Settings__mdt/fields/breg_Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Job_Start_Date__c</fullName>
    <description>Date when job should be started</description>
    <label>Job Start Date</label>
    <type>DateTime</type>
</CustomField>